--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Careers | AAR</title>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="EF30D1DA-1F62-4377-90F0-B4CE84753437.ico" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="EF30D1DA-1F62-4377-90F0-B4CE84753437.ico" type="image/x-icon">
 </head>
 <body>
 <img src="pulpitrock.jpg" alt="AARLogo">
