--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 <link rel="shortcut icon" href="EF30D1DA-1F62-4377-90F0-B4CE84753437.ico" type="image/x-icon">
 </head>
 <body>
-<img src="pulpitrock.jpg" alt="AARLogo">
+<img src="45475D57-9D17-42A7-8A91-23DD0AED01BA.png" alt="AARLogo">
 </body>
