--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <title>Careers | AAR</title>
 <link rel="icon" href="EF30D1DA-1F62-4377-90F0-B4CE84753437.ico" type="image/x-icon">
@@ -7,5 +8,5 @@
 <link rel="shortcut icon" href="EF30D1DA-1F62-4377-90F0-B4CE84753437.ico" type="image/x-icon">
 </head>
 <body>
-<img src="45475D57-9D17-42A7-8A91-23DD0AED01BA.png" alt="AARLogo">
+<img src="45475D57-9D17-42A7-8A91-23DD0AED01BA.png" alt="AARLogo"> <a href="/">Careers</a>
 </body>
